Fix contrast in admin search input

--- a/django/contrib/admin/static/admin/css/changelists.css
+++ b/django/contrib/admin/static/admin/css/changelists.css
@@ -87,6 +87,7 @@
     font-size: 0.875rem;
     padding: 5px;
     color: var(--body-fg);
+    background: var(--body-bg);
 }
 
 #toolbar #searchbar {
